Make conditions that cause additional pass for shrink wrap case less restrictive so that we do the additional pass inside a shrink-wrap scrollframe.  b=325680  r+sr=roc